# SistemasCiberfisicos

./: README.md  project1.xml
Projecto 1/: Sonda PathFinder  cenario_1.xml  cenario_2.xml  cenario_3.xml  cenario_3_e_2_fixed.xml  cenario_4.xml
Projecto 2/: Measures.txt  data_recorder.py
Projecto 2/dados bons/: 11:05:2023_00:00:00.csv  11:05:2023_14:38:17 p = 70.csv  P=35.5, I=5, D=10.csv
Projecto 2/gui/: configurator.py  data_recorder.py  data_visualization.py  data_visualization_layout.py  data_visualization_plot.py  data_visualization_thread.py  layout.py  main.py  plot.py  send_test.py  send_test_state.py  send_test_temp.py  thread.py
Projecto 2/gui/data/: .~lock.30:04:2023_22:36:36.csv#  01:05:2023_00:59:56.csv  01:05:2023_01:07:05.csv  01:05:2023_23:20:16.csv  01:05:2023_23:23:32.csv  01:05:2023_23:35:49.csv  01:05:2023_23:37:23.csv  01:05:2023_23:46:04.csv  01:05:2023_23:49:24.csv  02:05:2023_00:30:58.csv  02:05:2023_00:33:06.csv  02:05:2023_00:33:08.csv  02:05:2023_00:33:09.csv  02:05:2023_00:33:10.csv  02:05:2023_00:33:11.csv  02:05:2023_00:33:12.csv  02:05:2023_00:33:13.csv  02:05:2023_00:33:14.csv  02:05:2023_00:33:16.csv  02:05:2023_00:35:26.csv  02:05:2023_00:44:47.csv  02:05:2023_00:47:53.csv  02:05:2023_21:47:52.csv  02:05:2023_21:52:22.csv  02:05:2023_22:08:53.csv  10:05:2023_17:25:45.csv  10:05:2023_17:27:40.csv  (+26 more)
Projecto 2/pico/: actuation.py  control.py  control_server.py  fan.py  mutex_shared_mem_test.py  network.py  sensor_data_acquisiton.py  temp_client.py
Projecto 2/temperatura/: CMakeLists.txt  temperatura.cpp
gui/: data_recorder.py
(+6 files in other folders)
